<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/client_list_header_dark_grey"
    android:orientation="vertical">

    <include layout="@layout/motherdetail_nav_bar" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/smart_register_client_divider_height"
        android:src="@color/smart_register_client_divider_color" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/child_detail_information"
            style="@style/CustomFontTextViewStyle.ListView.Medium"

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1.33"
            android:text="@string/basic_information"
            android:textColor="@color/text_black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/detail_today"
            style="@style/CustomFontTextViewStyle.ListView.Medium"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1.91"
            android:text="@string/risk"
            android:textColor="@color/text_black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/smart_register_client_divider_height"
        android:src="@color/smart_register_client_divider_color" />

    <include
        layout="@layout/ki_detail_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/smart_register_client_divider_height"
        android:src="@color/smart_register_client_divider_color" />

    <LinearLayout
        android:id="@+id/clients_header_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_header_height"
        android:layout_marginLeft="@dimen/list_view_margin_left_and_right"
        android:layout_marginRight="@dimen/list_view_margin_left_and_right"
        android:orientation="horizontal">

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/mother_summary"
            style="@style/CustomFontTextViewStyle.ListView.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/elco_details_summary"
            android:textColor="@color/text_black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/smart_register_client_divider_height"
        android:src="@color/smart_register_client_divider_color" />

    <include
        android:id="@+id/id1"
        layout="@layout/ki_detail_data_layout" />

    <include
        android:id="@+id/id2"
        layout="@layout/risk_detail_data_layout"
        android:visibility="gone" />
</LinearLayout>
