<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <!--<Button-->
        <!--android:id="@+id/btn_getbattery"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:text="Getbattery" />-->
<!---->
    <!--<Button-->
        <!--android:id="@+id/btn_isOfflineMeasure"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:text="IsOfflineMeasure" />-->
<!---->
    <!--<Button-->
        <!--android:id="@+id/btn_enableOfflineMeasure"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:text="EnableOfflineMeasure" />-->
<!---->
    <!--<Button-->
        <!--android:id="@+id/btn_disableOfflineMeasure"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:text="DisableOfflineMeasure" />-->
<!---->
    <!--<Button-->
        <!--android:id="@+id/btn_startMeasure"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:text="StartMeasure" />-->
<!---->
    <!--<Button-->
        <!--android:id="@+id/btn_stopMeasure"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:text="StopMeasure" />-->

    <!--<Button-->
        <!--android:id="@+id/btn_getOfflineNum"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:text="GetOfflineNumber" />-->
<!---->
    <!--<Button-->
        <!--android:id="@+id/btn_getOfflineData"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:text="GetOfflineData" />-->


    <Button
        android:id="@+id/btn_startStopMeasure"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:text="Start" />

    <Button
        android:id="@+id/btn_disconnect"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:text="Disconnect" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tabel">

        <TableRow
            android:id="@+id/firstRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="10dp"
                android:text="@string/sys"
                android:textColor="#fff"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/tv_sys"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/pink"
                android:textSize="150sp"
                android:gravity="right"/>
        </TableRow>
        <TableRow
            android:id="@+id/secondRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="10dp"
                android:text="@string/dia"
                android:textColor="#fff"
                android:textSize="50sp" />
            <TextView
                android:id="@+id/tv_dia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/light_blue"
                android:textSize="150sp" />
        </TableRow>
        <TableRow
            android:id="@+id/pulseRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="10dp"
                android:text="@string/pulse"
                android:textColor="#fff"
                android:textSize="50sp" />
            <TextView
                android:id="@+id/tv_pulse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/green"
                android:textSize="150sp"
                android:layout_gravity="right"
                />
        </TableRow>
    </TableLayout>

    <ProgressBar
        android:id="@+id/pb_bpm"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:progressDrawable="@drawable/vertical_progress_bar"
        android:max="250"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/tv_return"
        android:layout_width="fill_parent"
        android:layout_height="150dp" />
    <Button
        android:id="@+id/btn_done"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:text="@string/btn_done"
        />

</LinearLayout>
