<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:weightSum="1">

        <ImageView
            android:layout_width="103dp"
            android:layout_height="100dp"
            android:id="@+id/motherdetailprofileview"
            android:src="@drawable/woman_placeholder"
            android:layout_margin="10dp"
            android:scaleType="fitXY" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15">

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                style="@style/CustomFontTextViewStyle.ListView.Medium"
                android:text="@string/name"
                android:layout_margin="5dp"
                android:id="@+id/txt_wife_name"
                android:textSize="14sp"
                android:textColor="@color/text_black" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                style="@style/CustomFontTextViewStyle.ListView.Medium"
                android:text="@string/nik"
                android:id="@+id/txt_nik"
                android:textSize="14sp"
                android:layout_margin="5dp"
                android:textColor="@color/text_black" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                style="@style/CustomFontTextViewStyle.ListView.Medium"
                android:text="@string/husband_name"
                android:id="@+id/txt_husband_name"
                android:textSize="14sp"
                android:layout_margin="5dp"
                android:textColor="@color/text_black" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                style="@style/CustomFontTextViewStyle.ListView.Medium"
                android:text="@string/date_of_birth"
                android:id="@+id/txt_dob"
                android:textSize="14sp"
                android:layout_margin="5dp"
                android:textColor="@color/text_black" />
            <org.smartregister.view.customcontrols.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                style="@style/CustomFontTextViewStyle.ListView.Medium"
                android:text="@string/phone"
                android:id="@+id/txt_contact_phone_number"
                android:textSize="14sp"
                android:layout_margin="5dp"
                android:textColor="@color/text_black" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="330dp"
            android:layout_height="match_parent">
            <org.smartregister.view.customcontrols.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                style="@style/CustomFontTextViewStyle.ListView.Medium"
                android:layout_margin="5dp"
                android:id="@+id/Risk"
                android:text="RISK :"
                android:textColor="@color/alert_urgent_red"
                android:textSize="14sp"
                />
            <org.smartregister.view.customcontrols.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                style="@style/CustomFontTextViewStyle.ListView.Medium"
                android:layout_margin="5dp"
                android:id="@+id/txt_risk1"
                android:textSize="14sp"
                android:textColor="@color/text_black" />
            <org.smartregister.view.customcontrols.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                style="@style/CustomFontTextViewStyle.ListView.Medium"
                android:layout_margin="5dp"
                android:id="@+id/txt_risk2"
                android:textSize="14sp"
                android:textColor="@color/text_black" />
            <org.smartregister.view.customcontrols.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                style="@style/CustomFontTextViewStyle.ListView.Medium"
                android:layout_margin="5dp"
                android:id="@+id/txt_risk3"
                android:textSize="14sp"
                android:textColor="@color/text_black" />
            <org.smartregister.view.customcontrols.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                style="@style/CustomFontTextViewStyle.ListView.Medium"
                android:layout_margin="5dp"
                android:id="@+id/txt_risk4"
                android:textSize="14sp"
                android:textColor="@color/text_black" />
            <org.smartregister.view.customcontrols.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                style="@style/CustomFontTextViewStyle.ListView.Medium"
                android:layout_margin="5dp"
                android:textColor="@color/alert_urgent_red"
                android:id="@+id/show_more"
                android:textSize="18sp"/>
            <org.smartregister.view.customcontrols.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                style="@style/CustomFontTextViewStyle.ListView.Medium"
                android:layout_margin="5dp"
                android:textColor="@color/alert_urgent_red"
                android:id="@+id/show_more_detail"
                android:visibility="gone"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/icon_device"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/pulseheart"
                android:visibility="invisible"
                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>